--- a/RetailStore/build.gradle
+++ b/RetailStore/build.gradle
@@ -40,7 +40,9 @@ dependencies {
              "org.mongodb:mongo-java-driver:3.3.0",
              "org.springframework.boot:spring-boot-starter-data-mongodb",
              "io.springfox:springfox-swagger-ui:2.6.0",
-             "io.springfox:springfox-swagger2:2.6.0"
+             "io.springfox:springfox-swagger2:2.6.0",
+             'org.springframework.security:spring-security-web:4.2.1.BUILD-SNAPSHOT',
+             'org.springframework.security:spring-security-config:4.2.1.BUILD-SNAPSHOT'
     		
     testCompile("org.springframework.boot:spring-boot-starter-test:2.0.0.BUILD-SNAPSHOT")
 }
